Revision history for {{$dist->name}}

{{$NEXT}}

0.46      2017-03-23 15:47:20 -0400
  - split off from FFI::Platypus 0.45