@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Migrate from File::ShareDir to File::ShareDir::Dist
 
 0.46      2017-03-23 15:47:20 -0400
   - split off from FFI::Platypus 0.45
